gitops/apps/todo-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-api
  labels:
    name: todo-api
    app: todo-api
