gitops/apps/todo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo-api
  labels:
    app: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
