gitops/apps/todo-api/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: todo-api
  namespace: todo-api
  labels:
    app: todo-api
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8s-todo.buildplatform.net`)
      kind: Rule
      services:
        - name: todo-api
          port: 80
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: compression
          namespace: traefik
